# blockchain-voting-app

./: Cargo.toml  README.md
interactor/: Cargo.toml  state.toml
interactor/src/: interactor_main.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: blockchain-voting-app.abi.json  blockchain-voting-app.mxsc.json
scenarios/: blockchain_voting_app.scen.json
smart-contract/: README.md
smart-contract/interactor/: state.toml
smart-contract/interactor/src/: interactor_main.rs  proxy.rs
smart-contract/output/: blockchain-voting-app.abi.json  blockchain-voting-app.imports.json  blockchain-voting-app.mxsc.json  proxy.rs
smart-contract/src/: blockchain_voting_app.rs  request_add_allowed_voter.json  request_create_election.json
smart-contract/tests/: blockchain_voting_app_scenario_go_test.rs  blockchain_voting_app_scenario_rs_test.rs
smart-contract/wasm/src/: lib.rs
src/: blockchain_voting_app.rs  request_add_allowed_voter.json  request_vote.json
voting-frontend/: index.html  package-lock.json  package.json
voting-frontend/src/components/Layout/Footer/: Footer.tsx
voting-frontend/src/config/: config.devnet.ts
voting-frontend/src/pages/Dashboard/: Dashboard.tsx
voting-frontend/src/pages/Dashboard/widgets/Account/: Account.tsx
voting-frontend/src/pages/Dashboard/widgets/BatchTransactions/helpers/: sendBatchTransactions.ts  signAndAutoSendBatchTransactions.ts  (+1 more)
voting-frontend/src/pages/Dashboard/widgets/Query/: ContractQuery.tsx  querySmartContract.tsx
voting-frontend/src/pages/Home/: Home.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
