[package]
name = "blockchain-voting-app"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/blockchain_voting_app.rs"

[dependencies.multiversx-sc]
version = "0.53.2"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.2"

[workspace]
members = [
    ".",
    "meta",
]
